--- a/oppai.html
+++ b/oppai.html
@@ -637,7 +637,7 @@
             <div class="footer-grid">
                 <div class="footer-col">
                     <h3>About Us</h3>
-                    <p style="color: #bbb; font-size: 14px; line-height: 1.6; margin-bottom: 15px;"><p>we are a startup group of three</p>
+                    <p style="color: #bbb; font-size: 14px; line-height: 1.6; margin-bottom: 15px;"><p>fitgirl repacks is  platform to run programming, data structures, algorithms, and prepare for coding interviews</p>
                 </div>
                 
                 <div class="footer-col">
